metadata/force-app/main/default/objects/CustomName_iSzpp__c/CustomName_iSzpp__c.object-meta.xml
<CustomObject>
    <description>Description_uJvPx</description>
    <label>CustomLabel_BSBBJ</label>
    <nameField>
        <label>CustomLabel_BSBBJ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_BSBBJs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>