metadata/force-app/main/default/objects/CustomName_iSzpp__c/fields/CustomField_XQEtV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_XQEtV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldPEEVo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>